respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Customer_Quote__c.object
<CustomObject>
    <description>Object defining all details of a quote or an order associated to a customer Account. Master object for all preceding Import-Export objects</description>
    <fields>
        <fullName>AUTORIZADO_FP_FO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUTORIZADO FP/FO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountActive__c</fullName>
        <formula>Account_for__r.ActiveSap__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Destination_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup filter to select from Account Addresses associated to the selected Consignee Account</description>
        <inlineHelpText>Specify Consignee Account first</inlineHelpText>
        <label>Account Destination Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR 4</booleanFilter>
            <filterItems>
                <field>Account_Address__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account_Address__c.status__c</field>
                <operation>equals</operation>
                <value>Validado</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>NATIONAL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Account Destination Address)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email_2__c</fullName>
        <label>Additional Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <label>Additional Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Executive_User__c</fullName>
        <formula>Account_for__r.Owner.FirstName  &amp; &quot; &quot; &amp;Account_for__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner (Sales Executive)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Origin_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Supplier/Shipper Account&quot;</inlineHelpText>
        <label>Account Origin Address</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (4)</booleanFilter>
            <filterItems>
                <field>Account_Address__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account_Address__c.status__c</field>
                <operation>equals</operation>
                <value>Validado</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>equals</operation>
                <value>NATIONAL</value>
            </filterItems>
            <filterItems>
                <field>$Source.Service_Mode__c</field>
                <operation>notEqual</operation>
                <value>NATIONAL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Account Origin Address)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Department__c</fullName>
        <formula>Account_for__r.Owner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Account_for__r.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Billing_Address__c</fullName>
        <description>Specify Billing Address with parameters: Street, City, Postal Code, State and Country</description>
        <formula>Account_for__r.BillingStreet  &amp; &quot;, &quot; &amp;  Account_for__r.BillingCity &amp; &quot;, &quot; &amp;  Account_for__r.BillingPostalCode &amp; &quot;, &quot; &amp;  Account_for__r.BillingState &amp; &quot;, &quot; &amp;  Account_for__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Billing Address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Customer_Name_del__c</fullName>
        <formula>Account_for__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Customer) Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account for (Price List)</label>
        <referenceTo>Customer_Price_List__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_for_Record_Type__c</fullName>
        <formula>Account_for__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Record Type)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for_Shipping_Address__c</fullName>
        <description>Specify Shipping Street, City, Postal Code, State and Country</description>
        <formula>Account_for__r.ShippingStreet  &amp; &quot;, &quot; &amp;  Account_for__r.ShippingCity  &amp; &quot;, &quot; &amp; Account_for__r.ShippingPostalCode  &amp; &quot;, &quot; &amp;  Account_for__r.ShippingState &amp; &quot;, &quot; &amp;  Account_for__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account for (Shipping Address)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_for__c</fullName>
        <inlineHelpText>Record Type must be Customer</inlineHelpText>
        <label>Account for (Customer)</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer, Prospect, Prospect Bloq, Prospect Mkt</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import-Export Quotes Orders (Account for)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Account_for</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Account_origin_address_text__c</fullName>
        <formula>Account_Origin_Address__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account origin address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aditional_Discounts__c</fullName>
        <label>Aditional Discounts</label>
        <summarizedField>Import_Export_Discount_Line__c.Amount_copy__c</summarizedField>
        <summaryForeignKey>Import_Export_Discount_Line__c.Import_Export_Quote_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Adminvtas_Contado__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[Exlcusivo Admin Ventas]</inlineHelpText>
        <label>Factura Contado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Fee__c</fullName>
        <label>Agency Fee</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agente_Aduanal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agente Aduanal</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Agente Aduanal)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Air_Guide__c</fullName>
        <inlineHelpText>Solo para folios &quot;ES&quot;</inlineHelpText>
        <label>Waybill</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Collection_Required__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ammount_Received__c</fullName>
        <label>Ammount Received (OLD)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Received_Sum__c</fullName>
        <label>Amount Received Sum (Number)</label>
        <summarizedField>Invoice__c.Amount_Received_Imp_Exp_Currency__c</summarizedField>
        <summaryForeignKey>Invoice__c.Import_Export_Quote_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount_Received__c</fullName>
        <formula>Amount_Received_Sum__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Number_Shipments__c</fullName>
        <label>Annual Number Shipments</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApprovedCount__c</fullName>
        <formula>if( ISPICKVAL(Quotation_Status__c, &quot;Approved as Succesful&quot;), 1, 
if( ISPICKVAL(Quotation_Status__c, &quot;Shipped&quot;), 1, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_Date_time01__c</fullName>
        <label>Approved Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authorized_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Costs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awaiting Costs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_costs_date__c</fullName>
        <label>Awaiting costs date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Awaiting_load_time__c</fullName>
        <defaultValue>TIMENOW()</defaultValue>
        <label>Awaiting load time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Awaiting_unload_time__c</fullName>
        <defaultValue>TIMENOW()</defaultValue>
        <label>Awaiting unload time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>BOL_Associated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BOL Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B_L_Status__c</fullName>
        <label>B/L Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Telex</fullName>
                </value>
                <value>
                    <fullName>Sea Waybill</fullName>
                </value>
                <value>
                    <fullName>Original Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Border__c</fullName>
        <label>Border</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Norte</fullName>
                </value>
                <value>
                    <fullName>Sur</fullName>
                </value>
                <value>
                    <fullName>Marítimas</fullName>
                </value>
                <value>
                    <fullName>Interiores</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ByPass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CE_Tipodeservicio_IMPAK__c</fullName>
        <description>Determinar que tipo o nivel de servicio se le esta proporcionando al cliente. servicio A, B o C,</description>
        <inlineHelpText>Selecciona el tipo de nivel de servicio que se proporcionara al cliente</inlineHelpText>
        <label>Tipo de Servicio IMPAK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calc_Gasto_Op_Dir__c</fullName>
        <formula>IF(ISPICKVAL(CurrencyIsoCode,&quot;USD&quot;), Gasto_Operativo_Prod1__c *  Conversion_Rate_Calc__c   , Gasto_Operativo_Prod1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gasto Operativo Directo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calc_Gasto_Op_Wca__c</fullName>
        <formula>IF(ISPICKVAL(CurrencyIsoCode,&quot;USD&quot;), Gasto_Operativo_Prod2__c * Conversion_Rate_Calc__c , Gasto_Operativo_Prod2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gasto Operativo WCA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Price List</label>
        <referenceTo>Price_List__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Catalog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chargeable_Weight__c</fullName>
        <formula>Total_Volume_m3_2__c*1000000/6000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chargeable Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clasificacion_proveedores__c</fullName>
        <formula>TEXT( Account_for__r.Carrier_Class__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clasificación de proveedores</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clave_Via_Entrada_Salida__c</fullName>
        <description>Precisa la vía de ingreso o salida de los bienes o mercancías en territorio nacional.
Catalogo c_CveTransporte
01 Autotransporte Federal,
02 Transporte Marítimo,
03 Transporte Aéreo,</description>
        <formula>IF( 

       ISPICKVAL( Freight_Mode__c , &quot;Road&quot;), &quot;01&quot;,
    IF(ISPICKVAL( Freight_Mode__c , &quot;Sea&quot;) , &quot;02&quot; ,&quot;03&quot; 

))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Precisa la vía de ingreso o salida de los bienes o mercancías en territorio nacional.
Catalogo c_CveTransporte
01 Autotransporte Federal,
02 Transporte Marítimo,
03 Transporte Aéreo,</inlineHelpText>
        <label>Clave Via Entrada/Salida</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clave_de_Unidad_de_Peso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clave de Unidad de Peso</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo_SAT__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Unidad Peso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo_SAT__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_of_Client__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Client of Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Client of Client)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_con_cita__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cliente con cita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cobranza_EmailWF__c</fullName>
        <label>Cobranza Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Collection_Required__c</fullName>
        <inlineHelpText>Solo para folios &quot;ES&quot;</inlineHelpText>
        <label>Collection Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comercio_Exterior__c</fullName>
        <label>Comercio Exterior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_Status__c</fullName>
        <formula>IF(ISPICKVAL( Quotation_Status__c,&quot;Quote being prepared&quot;), &quot;Open&quot;,
IF(ISPICKVAL( Quotation_Status__c,&quot;Awaiting costs suppliers&quot;), &quot;Open&quot;,
IF(ISPICKVAL( Quotation_Status__c,&quot;Sent awaiting response&quot;), &quot;Open&quot;,
IF(ISPICKVAL( Quotation_Status__c,&quot;Approved as Succesful&quot;), &quot;Closed&quot;,
IF(ISPICKVAL( Quotation_Status__c,&quot;Quote Declined&quot;), &quot;Closed Declined&quot;,
IF(ISPICKVAL( Quotation_Status__c,&quot;Shipped&quot;), &quot;Closed&quot;,NULL))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Status__c</fullName>
        <defaultValue>&apos;CUSTOMER CREATED&apos;</defaultValue>
        <label>Community Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CUSTOMER CREATED</fullName>
                    <default>true</default>
                    <label>CUSTOMER CREATED</label>
                </value>
                <value>
                    <fullName>SENT TO PAK2GO</fullName>
                </value>
                <value>
                    <fullName>COMPLETED BY PAK2GO</fullName>
                </value>
                <value>
                    <fullName>CONFIRMED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comparison_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Comparison Search</label>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders - Comparison Search</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on &quot;Consignee Account&quot;</inlineHelpText>
        <label>Contacto Destino</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Consignee__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Consignee Contact)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Record Type must be Customer or Agente Aduanal</inlineHelpText>
        <label>Cuenta Destino</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer, Consignee, Supply Chain Partner, Agente Aduanal</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Consignee Account (Destination))</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Dependent on Account for (Customer)</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Contact)</relationshipLabel>
        <relationshipName>Import_Export_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Count__c</fullName>
        <label>Container Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Container_Size__c</fullName>
        <label>Container Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>20&quot; Container</fullName>
                </value>
                <value>
                    <fullName>40&quot; Container</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Type</label>
        <referenceTo>Container_Type__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Duration_months__c</fullName>
        <label>Contract Duration (months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Calc__c</fullName>
        <formula>CURRENCYRATE(&quot;USD&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Rate Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Conversion Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_Services_Std_Margin__c</fullName>
        <formula>Services_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Services Std Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cotizacion_Proyecto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cotizacion / Proyecto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_ofDischarge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Discharge</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Country of Discharge)</relationshipLabel>
        <relationshipName>Import_Export_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_ofLoad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Load</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Country of Load)</relationshipLabel>
        <relationshipName>Import_Export_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Date_time__c</fullName>
        <formula>DATETIMEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_From__c</fullName>
        <label>Created From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_To__c</fullName>
        <label>Created To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Creator_Email__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cube_m3__c</fullName>
        <label>Cube (m3)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Reference Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer_Quote__c.Account_for__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account_for__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Quote__c</referenceTo>
        <relationshipLabel>Import-Export Quotes/Orders (Customer Reference Form)</relationshipLabel>
        <relationshipName>Import_Export_Quotes_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customs__c</fullName>
        <inlineHelpText>Requerid for Impak</inlineHelpText>
        <label>Customs</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Border__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agua Prieta</fullName>
                </value>
                <value>
                    <fullName>Ciudad Acuña</fullName>
                </value>
                <value>
                    <fullName>Ciudad Camargo</fullName>
                </value>
                <value>
                    <fullName>Ciudad Juárez</fullName>
                </value>
                <value>
                    <fullName>Ciudad Miguel Alemán</fullName>
                </value>
                <value>
                    <fullName>Ciudad Reynosa</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Matamoros</fullName>
                </value>
                <value>
                    <fullName>Mexicali</fullName>
                </value>
                <value>
                    <fullName>Naco</fullName>
                </value>
                <value>
                    <fullName>Nogales</fullName>
                </value>
                <value>
                    <fullName>Nuevo Laredo</fullName>
                </value>
                <value>
                    <fullName>Ojinaga</fullName>
                </value>
                <value>
                    <fullName>Piedras Negras</fullName>
                </value>
                <value>
                    <fullName>Puerto Palomas</fullName>
                </value>
                <value>
                    <fullName>San Luis Río Colorado</fullName>
                </value>
                <value>
                    <fullName>Sonoyta</fullName>
                </value>
                <value>
                    <fullName>Tecate</fullName>
                </value>
                <value>
                    <fullName>Tijuana</fullName>
                </value>
                <value>
                    <fullName>Ciudad Hidalgo</fullName>
                </value>
                <value>
                    <fullName>Subteniente López</fullName>
                </value>
                <value>
                    <fullName>Acapulco</fullName>
                </value>
                <value>
                    <fullName>Altamira</fullName>
                </value>
                <value>
                    <fullName>Cancún</fullName>
                </value>
                <value>
                    <fullName>Ciudad del Carmen</fullName>
                </value>
                <value>
                    <fullName>Coatzacoalcos</fullName>
                </value>
                <value>
                    <fullName>Dos Bocas</fullName>
                </value>
                <value>
                    <fullName>Ensenada</fullName>
                </value>
                <value>
                    <fullName>Guaymas</fullName>
                </value>
                <value>
                    <fullName>La Paz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DO_Contact_1_Release_to_Company__c</fullName>
        <label>DO Contact 1 Release to Company</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Contact_1_Shipment_Pickup__c</fullName>
        <label>DO Contact 1 Shipment Pickup</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Release_Date__c</fullName>
        <label>DO Release Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DO_Release_Valid_To__c</fullName>
        <label>DO Release Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DO_Release_to_Company__c</fullName>
        <label>DO Release to Company</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_Remarks_Shipment_Pickup__c</fullName>
        <label>DO Remarks Shipment Pickup</label>
        <type>TextArea</type>
    </fields>
</CustomObject>